--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,11 +18,12 @@ body {
 	font-size: 14px;
 	line-height: 1.3;
 	color: $white;
-    background-color: $very-dark-blue;
+	background-color: $very-dark-blue;
 }
 
 a,
 a:visited,
 a:hover {
+	color: inherit;
 	text-decoration: none;
 }
