--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
 $dark-blue: hsl(209, 23%, 22%);
 $very-dark-blue: hsl(207, 26%, 17%);
 $white: hsl(0, 0%, 100%);
+
+$space: 3%;
+$border-radius: 4px;
